traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:32: error: expected start of definition
	override def forward(i:Int)  { 
                 ^TraversalZigZag:35: error: expected start of definition
	override def forward()  {
                 ^TraversalZigZag:38: error: expected start of definition
	override def backward(i:Int) {
                 ^TraversalZigZag:41: error: expected start of definition
	override def backward() {
                 ^TraversalZigZag:44: error: Unmatched closing brace '}' ignored here
}
^